--- a/src/app/pages/sku-management/product-cashier/index/import-dialog/import-dialog.component.scss
+++ b/src/app/pages/sku-management/product-cashier/index/import-dialog/import-dialog.component.scss
@@ -1,13 +1,20 @@
 .preview {
-    padding: 16px 0;
-    margin: -6px;
+    padding: 24px 0;
+}
+
+.preview-container {
+    padding: 8px 0;
+    margin: -8px;
+    max-width: 800px;
+    max-height: 260px;
+    overflow: auto;
 }
 
 .preview-table {
     border-collapse: collapse;
 
     th, td {
-        padding: 6px;
+        padding: 8px;
     }
     th {
         border-bottom: 1px solid #eee;
@@ -18,4 +25,14 @@
     .price {
         text-align: right;
     }
+    .status {
+        text-align: center;
+    }
+    tr.error td {
+        color: red;
+    }
+}
+
+.preview-total {
+    padding-top: 24px;
 }
