--- a/src/app/pages/user-management/private-label/supplier-settings/edit/stock-edit.component.scss
+++ b/src/app/pages/user-management/private-label/supplier-settings/edit/stock-edit.component.scss
@@ -5,5 +5,10 @@
 
 .payments-column {
   min-width: 170px;
-  padding-top: 8px;
+}
+
+.qty-input {
+  border: 1px solid #ddd;
+  text-align: center;
+  padding: 10px 5px;
 }
