Use id only for selectedaudience notification

--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -661,28 +661,16 @@
               [selected]="selected" [selectionType]="'checkbox'" (select)='onSelect($event)'
               [selectCheck]='selectCheck'>
               
-              <!-- <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false"> -->
+              <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false">
                 <!-- <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
                   let-selectFn="selectFn">
                   <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected)"></mat-checkbox>
                 </ng-template> -->
-
-                <!-- <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-isSelected="isSelected"
+                <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-isSelected="isSelected"
                   let-onCheckboxChangeFn="onCheckboxChangeFn">
                   <mat-checkbox [checked]="bindSelector(isSelected, row)" (change)="onSelectAudience($event, row)">
                   </mat-checkbox>
                 </ng-template>
-              </ngx-datatable-column> -->
-
-              <ngx-datatable-column
-                [width]="68"
-                [sortable]="false"
-                [canAutoResize]="false"
-                [draggable]="false"
-                [resizeable]="false"
-                [headerCheckboxable]="true"
-                [checkboxable]="true"
-              >
               </ngx-datatable-column>
               <ngx-datatable-column name="Nama" prop="name"></ngx-datatable-column>
               <ngx-datatable-column name="Kode" prop="code" [sortable]="false">
