--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -662,10 +662,10 @@
               [selectCheck]='selectCheck'>
               
               <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false">
-                <!-- <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
+                <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
                   let-selectFn="selectFn">
-                  <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected)"></mat-checkbox>
-                </ng-template> -->
+                  <mat-checkbox [checked]="allRowsSelected" (change)="onSelectAll(!allRowsSelected)"></mat-checkbox>
+                </ng-template>
                 <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-isSelected="isSelected"
                   let-onCheckboxChangeFn="onCheckboxChangeFn">
                   <mat-checkbox [checked]="bindSelector(isSelected, row)" (change)="onSelectAudience($event, row)">
