remove: get tooltip data geotree produk PL

--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -195,8 +195,8 @@
                     Pilihan SRC</mat-checkbox>
                   <mat-checkbox (change)="isPrivateLabel($event)" class="mt-4 ml-4 mb-8"
                     formControlName="is_private_label">Produk Prinsipal</mat-checkbox>
-                  <mat-checkbox class="mt-4 ml-4 mb-8"
-                    formControlName="is_paylater">Produk Pilihan Pojok Modal</mat-checkbox>
+                  <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="is_paylater">Produk Pilihan Pojok Modal
+                  </mat-checkbox>
                 </div>
               </div>
               <div class="" formArrayName="areas"
@@ -244,8 +244,7 @@
                   <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px"
                     fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch">
                     <mat-form-field fxFlex="31%" class="is-light form-primary">
-                      <mat-select placeholder="National" formControlName="national"
-                        matTooltip="{{getToolTipData(wil.get('national').value, wil.controls['list_national'].value)}}">
+                      <mat-select placeholder="National" formControlName="national">
                         <mat-option *ngFor="let item of wil.controls['list_national'].value" [value]="item.id">
                           {{item.name}}</mat-option>
                       </mat-select>
@@ -256,7 +255,6 @@
                     </mat-form-field>
                     <mat-form-field fxFlex="31%" class="is-light form-primary">
                       <mat-select placeholder="Zone" formControlName="zone"
-                        matTooltip="{{getToolTipData(wil.get('zone').value, wil.controls['list_zone'].value)}}"
                         (selectionChange)="generataList('region', wil.get('zone').value, i, 'selection')">
                         <mat-option *ngFor="let item of wil.controls['list_zone'].value" [value]="item.id">{{item.name}}
                         </mat-option>
@@ -267,7 +265,6 @@
                     </mat-form-field>
                     <mat-form-field fxFlex="31%" class="is-light form-primary">
                       <mat-select placeholder="Regional" formControlName="region"
-                        matTooltip="{{getToolTipData(wil.get('region').value, wil.controls['list_region'].value)}}"
                         (selectionChange)="generataList('area', wil.get('region').value, i, 'selection')">
                         <mat-option *ngFor="let item of wil.controls['list_region'].value" [value]="item.id">
                           {{item.name}}</mat-option>
@@ -278,7 +275,6 @@
                     </mat-form-field>
                     <mat-form-field fxFlex="31%" class="is-light form-primary">
                       <mat-select placeholder="Area" formControlName="area"
-                        matTooltip="{{getToolTipData(wil.get('area').value, wil.controls['list_area'].value)}}"
                         (selectionChange)="generataList('salespoint', wil.get('area').value, i, 'selection')">
                         <mat-option *ngFor="let item of wil.controls['list_area'].value" [value]="item.id">{{item.name}}
                         </mat-option>
@@ -289,7 +285,6 @@
                     </mat-form-field>
                     <mat-form-field fxFlex="31%" class="is-light form-primary">
                       <mat-select placeholder="Salespoint" formControlName="salespoint"
-                        matTooltip="{{getToolTipData(wil.get('salespoint').value, wil.controls['list_salespoint'].value)}}"
                         (selectionChange)="generataList('district', wil.get('salespoint').value, i, 'selection')">
                         <mat-option *ngFor="let item of wil.controls['list_salespoint'].value" [value]="item.id">
                           {{item.name}}</mat-option>
@@ -301,7 +296,6 @@
                     </mat-form-field>
                     <mat-form-field fxFlex="31%" class="is-light form-primary">
                       <mat-select placeholder="District" formControlName="district"
-                        matTooltip="{{getToolTipData(wil.get('district').value, wil.controls['list_district'].value)}}"
                         (selectionChange)="generataList('territory', wil.get('district').value, i, 'selection')">
                         <mat-option *ngFor="let item of wil.controls['list_district'].value" [value]="item.id">
                           {{item.name}}</mat-option>
@@ -312,8 +306,7 @@
                       </mat-error>
                     </mat-form-field>
                     <mat-form-field fxFlex="31%" class="is-light form-primary">
-                      <mat-select placeholder="Territory" formControlName="territory"
-                        matTooltip="{{getToolTipData(wil.get('territory').value, wil.controls['list_territory'].value)}}">
+                      <mat-select placeholder="Territory" formControlName="territory">
                         <mat-option *ngFor="let item of wil.controls['list_territory'].value" [value]="item.id">
                           {{item.name}}</mat-option>
                       </mat-select>
