--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -674,7 +674,7 @@
                 </ng-template>
               </ngx-datatable-column>
               <ngx-datatable-column name="Nama" prop="name"></ngx-datatable-column>
-              <ngx-datatable-column name="Kode" prop="code" [sortable]="false">
+              <ngx-datatable-column name="Kode" prop="code">
                 <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                   {{row.code ? row.code : '-'}}
                 </ng-template>
