--- a/src/app/pages/popup-notification/create/popup-notification-create.component.html
+++ b/src/app/pages/popup-notification/create/popup-notification-create.component.html
@@ -90,22 +90,17 @@
           </div>
           <div class="px-24" fxLayout="row" fxLayoutAlign="start center">
             <h3 class="">
-              <strong>Gambar Popup Notifikasi {{formPopupGroup.get('content_type').value === 'new-product' ?
-                '(Disabled)' : ''}}</strong>
+              <strong>Gambar Popup Notifikasi</strong>
             </h3>
           </div>
           <div class="px-24">
             <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
               accept="image/*" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
-              (fileChange)="changeImage($event)"
-              [fileDropDisabled]="formPopupGroup.get('content_type').value === 'new-product'" [ngStyle]="{'cursor': formPopupGroup.get('content_type').value ===
-              'new-product' ? 'no-drop' : null}">
+              (fileChange)="changeImage($event)">
               <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
                 <mat-icon style="width: 48px;height: 48px;font-size: 48px;">add_photo_alternate_outline</mat-icon>
                 <br>
-                <span matPrefix>Tarik gambar popup notifikasi kesini. {{formPopupGroup.get('content_type').value ===
-                  'new-product' ?
-                  '(Disabled)' : ''}}</span>
+                <span matPrefix>Tarik gambar popup notifikasi kesini.</span>
                 <!-- <span matPrefix>Besar file maksimal 2mb</span> -->
               </div>
             </div>
