add KPI setting menu

--- a/src/app/pages/notes-retailer/component/list-notes-retailer.component.html
+++ b/src/app/pages/notes-retailer/component/list-notes-retailer.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Notes Retailer'">
+  <page-content-header [contentTitle]="'Principal Notes for Retailer'">
     <button style="min-width: 170px;" [routerLink]="['/notesretailer/notes-retailer-create']" mat-raised-button
       aria-label="Produk" type="button">
       <mat-icon>add</mat-icon>Create
