--- a/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
+++ b/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
@@ -5,10 +5,60 @@
   
     <div class="content p-24">
       <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
-        <div fxLayout="row" fxLayoutAlign="space-between center">
-          <h2 class="">Edit KPI Setting</h2>
-        </div>
-        <div class="ayo-middle py-24" fxLayout="column"></div>
+        <form [formGroup]="formKPI">
+          <div class="ayo-top px-24" fxLayout="row" fxLayoutAlign="space-between center">
+            <h3 class="font-weight-700">Detil Field Force</h3>
+          </div>
+          <div class="ayo-middle pt-24" fxLayout="column">
+            <mat-form-field fxFlex="100" class="is-light px-24">
+              <input matInput placeholder="Tahun" type="text" formControlName="year">
+            </mat-form-field>
+            <mat-form-field fxFlex="100" class="is-light px-24">
+              <input matInput placeholder="KPS" type="text" formControlName="kps_number">
+            </mat-form-field>
+            <mat-form-field fxFlex="100" class="is-light px-24">
+              <input matInput placeholder="Tanggal" type="text" formControlName="date">
+            </mat-form-field>
+            <div class="" formArrayName="kpi" *ngFor="let kpi of formKPI.get('kpis').controls; let i = index;">
+              <div [formGroupName]="i">
+                <div class="mb-16 kpi" fxLayout="row" fxLayoutAlign="space-between center">
+                  <div fxFlex="50">
+                    <h3 class="">KPI {{i+1}}</h3>
+                  </div>
+                  <div fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center"
+                    fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
+                    <button
+                      *ngIf="formKPI.get('kpis').value.length === 1 || i === (formFF.get('kpis').value.length - 1)"
+                      mat-raised-button type="button" (click)="addKPI()">
+                      <mat-icon>add</mat-icon>
+                    </button>
+                    <button mat-raised-button color="primary" type="button"
+                      (click)="deleteKPI(i)">
+                      <mat-icon>delete</mat-icon>
+                    </button>
+                  </div>
+                </div>
+                <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px"
+                  fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch">
+                  <mat-form-field fxFlex="31%" class="is-light form-primary">
+                    <mat-select placeholder="Kategori KPI" formControlName="category">
+                      <mat-option *ngFor="let item of categories" [value]="item">{{item | toCapitalize}}
+                      </mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="kpi.controls['category'].hasError('required') && kpi.controls['category'].touched">
+                      Kategori KPI harus diisi
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+            <div class="confirm btn-confirm px-24 py-48" fxLayout="row" fxLayoutGap="25px">
+              <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
+                SIMPAN
+              </button>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
