--- a/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
+++ b/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
@@ -7,7 +7,11 @@
       <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
         <form [formGroup]="formKPI">
           <div class="ayo-top px-24" fxLayout="row" fxLayoutAlign="space-between center">
-            <h3 class="font-weight-700">Detil Field Force</h3>
+            <h3 class="font-weight-700">Edit KPI Setting</h3>
+            <button
+              mat-raised-button type="button" (click)="addKPI()">
+              <mat-icon>add</mat-icon>
+            </button>
           </div>
           <div class="ayo-middle pt-24" fxLayout="column">
             <mat-form-field fxFlex="100" class="is-light px-24">
@@ -40,13 +44,43 @@
                 </div>
                 <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px"
                   fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch">
-                  <mat-form-field fxFlex="31%" class="is-light form-primary">
+                  <mat-form-field fxLayout="row wrap" class="is-light form-primary">
                     <mat-select placeholder="Kategori KPI" formControlName="category">
                       <mat-option *ngFor="let item of categories" [value]="item">{{item | toCapitalize}}
                       </mat-option>
                     </mat-select>
                     <mat-error *ngIf="kpi.controls['category'].hasError('required') && kpi.controls['category'].touched">
                       Kategori KPI harus diisi
+                    </mat-error>
+                  </mat-form-field>
+                  <mat-form-field *ngIf="kpi.controls['category'].value == 'visit'" fxLayout="row wrap" class="is-light form-primary">
+                    <mat-select placeholder="Brand" formControlName="brand">
+                      <!-- <mat-option *ngFor="let item of categories" [value]="item">{{item | toCapitalize}}
+                      </mat-option> -->
+                      <mat-option value="AFL12">AFL12</mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="kpi.controls['brand'].hasError('required') && kpi.controls['brand'].touched">
+                      Brand harus diisi
+                    </mat-error>
+                  </mat-form-field>
+                  <mat-form-field *ngIf="kpi.controls['category'].value == 'brand' || kpi.controls['category'].value == 'trade program'" fxLayout="row wrap" class="is-light form-primary">
+                    <mat-select placeholder="Brand" formControlName="brand">
+                      <!-- <mat-option *ngFor="let item of categories" [value]="item">{{item | toCapitalize}}
+                      </mat-option> -->
+                      <mat-option value="1">AFL12</mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="kpi.controls['brand'].hasError('required') && kpi.controls['brand'].touched">
+                      Brand harus diisi
+                    </mat-error>
+                  </mat-form-field>
+                  <mat-form-field *ngIf="kpi.controls['category'].value == 'brand' || kpi.controls['category'].value == 'trade program'" fxLayout="row wrap" class="is-light form-primary">
+                    <mat-select placeholder="Parameter" formControlName="parameter">
+                      <!-- <mat-option *ngFor="let item of categories" [value]="item">{{item | toCapitalize}}
+                      </mat-option> -->
+                      <mat-option value="1">OMZET ALL HMS 1 MINGGU (RUPIAH)</mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="kpi.controls['brand'].hasError('required') && kpi.controls['brand'].touched">
+                      Parameter harus diisi
                     </mat-error>
                   </mat-form-field>
                 </div>
